<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeshPanel</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">ble_not_supported</string>
    <string name="bluetooth_not_supported">Bluetooth not support</string>
    
    <!-- AdvertiseCallback errorCode -->
    <string name="advertise_failed_data_too_large">Failed to start advertising as the advertise data to be broadcasted is larger than 31 bytes.</string>
    <string name="advertise_failed_too_many_advertises">Failed to start advertising because no advertising instance is available.</string>
    <string name="advertise_failed_already_started">Failed to start advertising as the advertising is already started</string>
    <string name="advertise_failed_internal_error">Operation failed due to an internal error</string>
    <string name="advertise_failed_feature_unsupported">This feature is not supported on this platform</string>
    
    <string name="group_number">Group Number: </string>
    <string name="group_number_hint">1</string>
    <string name="color_picker">Color Picker: </string>
    <string name="color_temperature">Color Temperature: </string>
    <string name="color_temperature_hint">0</string>
    
    <string name="attrBean">attrBean</string>
    <string name="state">state</string>
    <string name="arrow">arrow</string>

    <string name="createNet">createNet</string>
    <string name="backToNet">backToNet</string>
    <string name="addDevice">AddDevice</string>
    
    <string name="desc">desc</string>
    <string name="net">Device</string>
    <string name="topology">Topology</string>
    <string name="about">About</string>

    <string name="hint_year"></string>
    <string name="hint_month"></string>
    <string name="hint_day"></string>
    <string name="hint_hour"></string>
    <string name="hint_minute"></string>
    <string name="hint_second"></string>

    <string name="color_palette">Color Palette</string>
    <string name="colors">Colors</string>
    <string name="time_name">Time</string>
    <string name="time_positive">OK</string>

    <string name="power_on">ON</string>
    <string name="power_off">OFF</string>


    <string name="permission_access_coarse_location_hint">This function cannot be opened without this permission. Please open permissions。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">This function cannot be opened without this permission. Please open permissions。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_write_external_hint">This function cannot be opened without this permission. Please open permissions。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
</resources>
