<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.china.meshPanel.MeshActivity">

    <group android:id="@+id/menu_option">
        <item
            android:id="@+id/action_create"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:icon="@drawable/ic_add"
            android:title="@string/createNet"/>

        <item
            android:id="@+id/action_back"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:icon="@drawable/ic_delete"
            android:title="@string/backToNet"/>

        <item
            android:id="@+id/action_about"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>
    </group>

    <!--
    <item
        android:id="@+id/action_start"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/start"/>
    -->

</menu>