<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="@dimen/text_size_small"
        android:padding="3dip"
        android:text="@string/attrBean"
        android:textColor="#040404"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Switch
        android:id="@+id/item_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="normal"
        android:showText="true"
        android:switchMinWidth="40dp"
        android:switchPadding="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:textOff="@string/power_off"
        android:textOn="@string/power_on"
        android:checked="true"/>

</RelativeLayout>